--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "apollo-boost": "^0.1.22",
     "expo": "^31.0.2",
+    "firebase": "^5.6.0",
+    "graphql": "^14.0.2",
     "react": "16.5.0",
+    "react-apollo": "^2.3.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-elements": "^0.19.1",
     "react-navigation": "^2.18.2"
   },
   "devDependencies": {
