db console prints but cant get json into vars

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-apollo": "^2.3.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
+    "react-native-firebase": "^5.1.1",
     "react-navigation": "^2.18.2"
   },
   "devDependencies": {
