Added calendar package

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "expo": "^31.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-calendars": "^1.21.0",
     "react-native-modal-selector": "^1.0.0",
+    "react-native-table-component": "^1.1.8",
     "react-navigation": "^2.18.2"
   },
   "devDependencies": {
